--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,11 @@
 }
 
 body {
-  font-family: 'Righteous', cursive;
+  font-family: 'Press Start 2P', cursive;
   margin: 0;
   font-size: 10px;
   background-color: #1c1c1c;
+  color: #1bbf00;
 }
 
 button {
@@ -18,6 +19,9 @@ button {
 }
 
 .game-container {
+  display: grid;
+  grid-template-columns: repeat(7, 14.2%);
+  grid-template-rows: repeat(8, 12.5%);
   margin: 80px 0;
   background-color: #000;
   width: 100vw;
@@ -26,14 +30,12 @@ button {
 }
 
 .game-container button {
-  font-family: 'Righteous', cursive;
+  font-family: 'Press Start 2P', cursive;
   margin: auto;
-  float: left;
 }
 
 .game {
   display: none;
-  position: relative;
   height: 50px;
   font-size: 2em;
 }
@@ -43,9 +45,9 @@ button {
   text-align: center;
   position: absolute;
   top: 40%;
-  left: 37%;
+  left: 25%;
   height: 100px;
-  width: 30%;
+  width: 50%;
   font-size: 3em;
 }
 
@@ -54,4 +56,43 @@ button {
   display: none;
   float: right;
   font-size: 3em;
+}
+
+#lvlup {
+  display: none;
+  max-width: 300px;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 25%;
+  height: 100px;
+  width: 50%;
+  font-size: 3em;
+}
+
+@media (min-width:700px) {
+  .game {
+    height: 50px;
+    font-size: 2em;
+    width: auto;
+  }
+  #start {
+    left: 33%;
+  }
+  #lvlup {
+    left: 33%;
+  }
+}
+@media (min-width:1025px) {
+  .game {
+    height: 50px;
+    font-size: 2em;
+    width: auto;
+  }
+  #start {
+    left: 38%;
+  }
+  #lvlup {
+    left: 38%;
+  }
 }
