--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,20 @@ button {
   padding: 0 2.6%;
 }
 
+.header {
+  margin: 1.7vh 0;
+  height: 8vh;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-flow: wrap;
+  align-items: center;
+}
+
 .game-container {
   display: grid;
   grid-template-columns: repeat(7, 14.2%);
   grid-template-rows: repeat(8, 12.5%);
-  margin: 80px 0;
   background-color: #000;
   width: 100vw;
   height: 80vh;
@@ -52,10 +61,13 @@ button {
 }
 
 #reset {
-  margin: 24px 0;
   display: none;
-  float: right;
-  font-size: 3em;
+  font-size: 2em;
+}
+
+#countdown {
+  display: none;
+  font-size: 2.5em;
 }
 
 #lvlup {
@@ -63,7 +75,7 @@ button {
   max-width: 300px;
   text-align: center;
   position: absolute;
-  top: 40%;
+  top: 45%;
   left: 25%;
   height: 100px;
   width: 50%;
