--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,11 @@ button {
   font-size: 2.5em;
 }
 
+#level {
+  display: none;
+  font-size: 2.5em;
+}
+
 #lvlup {
   display: none;
   max-width: 300px;
